components/02 - blocks/cta-block/_cta-block.scss
.cta {
  &__wrapper {
    width: 100%;

    .bold-headline {
      margin: 0;
      padding: 0;
    }

    &.uids-component--black {
      .bold-headline {
        color: $primary;
      }

      .cta__summary {
        color: #fff;
      }
    }

    &.uids-component--black,
    &.uids-component--gold {
      .bttn {
        flex: 1;
        color: $secondary;
        border: 1px solid #fff;
        background: #fff;
      }
    }
  }

  &__summary {
    margin: $sm auto $md;
    line-height: 1.5;

    @include breakpoint(container) {
      margin: 0;
    }
  }

  &__container {
    display: block;
    padding: $xlg $mobile-width-gutter;
    justify-items: center;
    align-items: center;
    text-align: center;

    .uids-component--left & {
      justify-items: unset;
      align-items: unset;
      text-align: unset;
      width: 100%;

    }

    @include breakpoint(menu) {
      display: grid;
      padding: $lg $desktop-width-gutter;
      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
      grid-column-gap: 0px;
      grid-row-gap: 0px;
    }
  }
}


.cta__container>div {
  @include breakpoint(container) {
    margin: 0 $md;
  }

  @include breakpoint(container) {
    flex: 1;
  }
}

.cta__wrapper.uids-component--left .bold-headline {
  font-size: 3.2rem;
}

.cta__wrapper.uids-component--left .bold-headline {
  margin-bottom: $sm;
  font-size: 2.5rem;
}

.cta__container {
  .cta__title {
    margin-left: 0;

    .uids-component--left & {
      grid-area: 1 / 1 / 2 / 3;
    }
  }

  .cta__content {
    margin-left: 0;

    .uids-component--left & {
      grid-area: 2 / 1 / 3 / 3;

    }
  }

  .cta__link {
    margin-right: 0;

    .uids-component--left & {
      grid-area: 1 / 3 / 3 / 4;
       @include breakpoint(menu) {
        text-align: right;
       }
    }
  }
}

